# Kaelinn-Engine

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  gravity.py  xmake.lua
doc/: .gitignore  package-lock.json
doc/src/components/: Pannel.vue
doc/src/components/doc/: Pannel.vue
doc/src/components/sidebar/: Sidebar.vue
doc/src/router/: index.js
doc/src/views/: Dashboard.vue  Home.vue  Template.vue
install/: build.ps1  build.sh
sample/: CMakeLists.txt
sample/src/: main.cpp
src/engine/: CMakeLists.txt  EngineApi.hpp  README.md
src/engine/component/: AComponent.cpp  AComponent.hpp
src/engine/component/body/: BodyComp.cpp  BodyComp.hpp
src/engine/component/button/: ButtonComp.cpp  ButtonComp.hpp
src/engine/component/collider/: ColliderComp.cpp  ColliderComp.hpp
src/engine/component/input/: InputComp.cpp  InputComp.hpp
src/engine/component/spatial/: SpatialComp.cpp  SpatialComp.hpp
src/engine/component/sprite/: SpriteComp.cpp  SpriteComp.hpp
src/engine/component/text/: TextComp.cpp  TextComp.hpp
src/engine/core/: Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  Scene.cpp  Scene.hpp
src/engine/event/: Event.hpp  Publisher.cpp  Publisher.hpp  Subscriber.cpp  Subscriber.hpp
src/engine/exception/: Exception.hpp
src/engine/interface/: IComponent.hpp  ISystem.hpp
src/engine/math/: Time.hpp  Utils.cpp  Utils.hpp  Vector2.cpp  Vector2.hpp
src/engine/system/: ASystem.cpp  ASystem.hpp
src/engine/system/input/: InputSystem.cpp  InputSystem.hpp
src/engine/system/network/: Client.hpp  NetworkSystem.cpp  NetworkSystem.hpp
src/engine/system/physic/: PhysicSystem.cpp  PhysicSystem.hpp
src/engine/system/render/: RenderSystem.cpp  RenderSystem.hpp
src/engine/system/scene/: SceneSystem.cpp  SceneSystem.hpp
src/engine/system/ui/: UISystem.cpp  UISystem.hpp
src/games/: CMakeLists.txt
src/games/simulation/: CMakeLists.txt  main.cpp
src/tests/: catch2-entity.cpp  catch2-event-bus.cpp  catch2-game.cpp  catch2-prefab.cpp  catch2-vector2.cpp
